# structured-additive-IR

./: CMakeLists.txt  CONTRIBUTING.md  LLVM_VERSION  README.md  canonicalization_patterns.cc  expansion.cc  expansion.h  loop_nest.cc  loop_nest.h  mapped_domain.cc  mapped_domain.h  sair_attributes.cc  sair_attributes.h  sair_base.td  sair_dialect.cc  sair_dialect.h  sair_op_interfaces.cc  sair_op_interfaces.h  sair_ops.cc  sair_ops.h  sair_ops.td  sair_opt.cc  sair_registration.cc  sair_registration.h  sair_traits.cc  sair_traits.h  sair_types.cc  sair_types.h  sequence.cc  sequence.h  storage.cc  storage.h  util.cc  util.h  utils.h
test/: CMakeLists.txt  access_pattern_expr.mlir  canonicalization.mlir  copy_to_map.mlir  default_expansion.mlir  default_expansion_invalid.mlir  default_loop_nest.mlir  default_memory_space.mlir  default_sequence.mlir  default_sequence_invalid.mlir  default_storage.mlir  default_storage_invalid.mlir  domain_shape.mlir  from_linalg.mlir  from_linalg_invalid.mlir  inline_trivial_sair_ops.mlir  insert_copies.mlir  introduce_loops.mlir  introduce_loops_invalid.mlir  invalid.mlir  lit.cfg.py  lit.site.cfg.py.in  lower_map_reduce.mlir  lower_proj_any.mlir  lower_proj_any_invalid.mlir  lower_to_llvm.mlir  lower_to_map.mlir  lower_to_map_invalid.mlir  lower_to_memref.mlir  lowering_annotation_invalid.mlir  lowering_annotation_roundtrip.mlir  mapping_expr.mlir  materialize_buffers.mlir  materialize_buffers_invalid.mlir  materialize_instances.mlir  materialize_instances_invalid.mlir  materialize_memrefs.mlir  materialize_memrefs_invalid.mlir  normalize_loops.mlir  normalize_loops_invalid.mlir  (+9 more)
test/integration/: sair_to_llvm.mlir  sair_to_loop.mlir
test/regression/: matmul.mlir
transforms/: CMakeLists.txt  default_lowering_attributes.cc  default_lowering_attributes.h  default_lowering_attributes.td  domain_utils.cc  domain_utils.h  inline_trivial_ops.cc  introduce_loops.cc  introduce_memrefs.cc  lower_map_reduce.cc  lower_proj_any.cc  lower_to_map.cc  lowering.cc  lowering.h  lowering.td  lowering_pass_classes.h  materialize_buffers.cc  materialize_instances.cc  normalize_loops.cc  rematerialize.cc  sair_from_linalg.cc  sair_from_linalg.h  sair_from_linalg.td  util.cc  util.h
